# customer-churn-mlops

./: .env.docker  .gitignore  Dockerfile  Dockerfile.mlflow  Makefile  README.md  backend.db  docker-compose.yaml  pyproject.toml
grafana_provisioning/alerting/: recall-alert.yaml
grafana_provisioning/dashboards/: customer_churn_dashboard.json  dashboards.yml
grafana_provisioning/datasources/: datasource.yml
initdb/: init-multi-db.sql
mlartifacts/1/33daac3524e0490eb5cf995eb298115b/artifacts/features/: features.json
mlartifacts/1/7092835a80e94e9386748f626c904a73/artifacts/preprocessor/: preprocessor.pkl
mlartifacts/1/93e4c95455074a3998e0283bd8e01dae/artifacts/preprocessor/: preprocessor.pkl
mlartifacts/1/models/m-00b052b0971f47e5ad52f9ba050a9cca/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlartifacts/1/models/m-0175d563a6d248959f7ef52b30d34a7d/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlartifacts/1/models/m-abbce29356154fcc90762c6fec5c117f/artifacts/: MLmodel  requirements.txt
mlartifacts/1/models/m-b619db5dcc65410aa0045d20297d5e11/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt
mlartifacts/1/models/m-bdc55e08cc59429ea8165c752185ac5c/artifacts/: MLmodel  model.pkl  serving_input_example.json
mlartifacts/1/models/m-ce22529b30a74070bb7a93ac2efb6807/artifacts/: MLmodel  conda.yaml  model.xgb  requirements.txt
mlartifacts/1/models/m-d1142864c50b4af0a40d1894e2a0f121/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-d332374ea7f749f1af8b57949ebda681/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlartifacts/1/models/m-e50ed972b02346b1944331995473725b/artifacts/: MLmodel  conda.yaml  model.pkl
notebooks/: eda.ipynb
reports/: drift.json  performance.html  performance.json  quality.html  quality.json
src/customer_churn_mlops/flows/: batch_inference_flow.py  kaggle_data_to_db_flow.py  launch_flows.py  model_training_flow.py  monitoring_flow.py
src/customer_churn_mlops/inference/: batch_predictor.py  model_loader.py
src/customer_churn_mlops/training/: model_trainer.py
src/customer_churn_mlops/utils/: config.py  data_processing.py  db_configs.py  mlflow_configs.py
(+6 files in other folders)
