[project]
name = "customer-churn-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian",email = "calzateu@eafit.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ydata-profiling (>=4.16.1,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.5,<=3.10)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.1.4,<4.0.0)",
    "prefect (>=3.4.10,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "scikit-learn (<1.7)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
